--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 git+ssh://git@github.com/mupaduw/mididings.git@cd706eed0d37f86477caf0c8da4808b2dea32246#egg=mididings
 git+ssh://git@github.com/mupaduw/kaos_kontrol#egg=kaos_kontrol
+python-osc
